# esp-bsp

.github/workflows/: build-examples-gh-pages-on-push.yml
examples/display/: CMakeLists.txt
examples/display/main/: CMakeLists.txt  display_main.c  idf_component.yml  lvgl_demo_ui.c
examples/display_P4_factory/: CMakeLists.txt  sdkconfig copy
examples/display_P4_factory/components/esp32_p4_box/: CMakeLists.txt  Kconfig  esp32_p4_box.c  esp32_p4_box_idf5.c  idf_component.yml
examples/display_P4_factory/components/esp32_p4_box/include/bsp/: display.h  esp32_p4_box.h
examples/display_P4_factory/main/: CMakeLists.txt  app_disp_fs.c  dispaly_main.c  idf_component.yml
examples/display_audio_photo/main/: idf_component.yml
examples/display_lvgl_HHK5/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
examples/display_lvgl_HHK5/main/: CMakeLists.txt  Kconfig.projbuild  dispaly_main.c  idf_component.yml
examples/display_lvgl_HHK5/main/commucation/: i2c_slave.c  i2c_slave.h  message.c  message.h
examples/display_lvgl_HHK5/main/custom/: custom.c
examples/display_lvgl_HHK5/main/gui/custom/: custom copy.c  custom.c  custom.c.back  custom.h  lv_conf_ext.h
examples/display_lvgl_HHK5/spiffs_assets/: arial.ttx
examples/display_lvgl_demos/: partitions.csv  sdkconfig.defaults
examples/display_lvgl_demos/main/: CMakeLists.txt  dispaly_lvgl_demos_main.c  idf_component.yml  (+1 more)
examples/display_lvgl_dynamic_font/: CMakeLists.txt
examples/display_thorvg/: CMakeLists.txt  partitions.csv  sdkconfig.bsp.esp32_p4_function_ev_board  sdkconfig.defaults
(+152 files in other folders)
