idf_component_register(
    SRC_DIRS 
    "./"
    "./gui/custom"
    "./gui/generated"
    "./gui/generated/guider_fonts"
    "./gui/generated/images"
    "./commucation"

    INCLUDE_DIRS 
    "."
    "./gui/custom"
    "./gui/generated"
    "./gui/generated/guider_customer_fonts"
    "./commucation"
)

